--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,22 @@ migrate_working_dir/
 **/doc/api/
 .dart_tool/
 build/
+
+# Node.js related (for example app backend)
+node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables and secrets
+.env
+.env.local
+.env.*.local
+*.pem
+*.key
+*.crt
+
+# AWS credentials
+.aws/
+aws-credentials.json
