--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,16 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  http: ^1.1.0
+  collection: ^1.18.0
   crypto: ^3.0.3
+  dio: ^5.4.0
   mime: ^2.0.0
   path: ^1.8.3
-  collection: ^1.18.0
   uuid: ^4.2.1
 
 dev_dependencies:
-  test: ^1.24.0
+  build_runner: ^2.4.8
   lints: ^6.0.0
   mockito: ^5.4.4
-  build_runner: ^2.4.8
   shelf: ^1.4.0
+  test: ^1.24.0
