chore: Add build artifacts to .gitignore
Exclude Flutter build directories and CocoaPods artifacts:
- build/ directories
- Pods/ directories
- .dart_tool/ directories
- Podfile.lock files

Prevents committing generated build files.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,11 @@ yarn-error.log*
 # AWS credentials
 .aws/
 aws-credentials.json
+
+# Build artifacts
+build/
+**/build/
+**/Pods/
+**/.dart_tool/
+**/ios/Podfile.lock
+**/macos/Podfile.lock
