refactor: rename docs/ to doc/ following Dart conventions
Rename docs/ directory to doc/ (singular) to follow Dart package
layout conventions and eliminate pub.dev validation warning.

Updated:
- Renamed docs/ directory to doc/
- Updated .pubignore to reference /doc/ instead of /docs/
- Updated all references in CLAUDE.md to use doc/ paths

This resolves the pub.dev validation warning about directory naming.

--- a/.pubignore
+++ b/.pubignore
@@ -1,7 +1,7 @@
 # Internal documentation (not for pub.dev)
-/docs/plans/
-/docs/research/
-/docs/review/
+/doc/plans/
+/doc/research/
+/doc/review/
 CLAUDE.md
 
 # Example Flutter app (too large, users can view on GitHub)
