example(s3): Add temporary credentials support to example app
- Add /sts-credentials endpoint for fetching temporary AWS credentials
- Update example app to configure getTemporarySecurityCredentials callback
- Add getObjectKey callback for custom object key generation
- Demonstrate temp credentials usage alongside backend signing

Shows how to use temporary credentials for client-side signing.

--- a/example/s3_real_app/server/package.json
+++ b/example/s3_real_app/server/package.json
@@ -7,15 +7,20 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": ["fluppy", "s3", "presigned-urls"],
+  "keywords": [
+    "fluppy",
+    "s3",
+    "presigned-urls"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "@aws-sdk/client-s3": "^3.470.0",
+    "@aws-sdk/client-sts": "^3.968.0",
     "@aws-sdk/s3-request-presigner": "^3.470.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
